--- a/custom_components/kincony-sha/manifest.json
+++ b/custom_components/kincony-sha/manifest.json
@@ -5,5 +5,7 @@
   "requirements": [],
   "dependencies": [],
   "codeowners": [],
-  "version": "1.2"
+  "version": "1.3.1",
+  "config_flow": true,
+  "iot_class": "local_polling"
 }
